Corrected some css and optimized for mobile

--- a/index.html
+++ b/index.html
@@ -24,29 +24,29 @@
         <div class="hero_text">
             <h1>Everything you need</h1>
             <p>From your neighborhood...Just in a single app</p>
-            <button>Sign up</button>
+            <button>Download now</button>
         </div>
         <div class="hero_img">
-            <img src="./Images/Delivery.jpg" alt="Neighborhood services" width="500px">
+            <img src="./Images/Delivery.jpg" alt="Neighborhood services">
         </div>
     </div>
     <div class="information">
         <h2>No matter the service. You're covered</h2>
         <div class="deck">
             <div class="card">
-                <img src="./Images/Handymen.jpg" alt="Handymen" width="150px">
+                <img src="./Images/Handymen.jpg" alt="Handymen">
                 <div class="card_txt">Handymen  </div>      
             </div>
             <div class="card">
-                <img src="./Images/Plumbing.jpg" alt="Plumbing" width="150px">
+                <img src="./Images/Plumbing.jpg" alt="Plumbing">
                 <div class="card_txt">Plumbers</div>      
             </div>
             <div class="card">
-                <img src="./Images/Repair.jpg" alt="Auto Repair" width="150px">
+                <img src="./Images/Repair.jpg" alt="Auto Repair">
                 <div class="card_txt">Auto repair</div>       
             </div>
             <div class="card">
-                <img src="./Images/Woodwork.jpg" alt="Woodwork" width="150px">
+                <img src="./Images/Woodwork.jpg" alt="Woodwork">
                 <div class="card_txt">Woodworkers  </div>     
             </div>
         </div>
@@ -54,7 +54,8 @@
     <div class="testimonial">
         <div class="quote">
             "With Mi Veci you are completely covered, no matter what you need for 
-            your house. Is something beyond the usual delivery app or repair service"
+            your house. Is something beyond the usual delivery app or repair service. 
+            And for the providers... is just the best service showcase they could have"
         </div>
         <div class="author">
             - The Odin Times, 2024
@@ -66,7 +67,7 @@
             <p>Have everything you need for home improvements/repairs in just a 
                 single app</p>
         </div>
-        <button>Sign up</button>
+        <button>Download now</button>
     </div>
     <div class="footer">
         Copyright &copy; Juan José Castillo 2022
